--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,6 @@
 .home{
+    position: relative;
+
     background-color: rgba(207, 207, 207, 0.00);
     display: grid;
 
@@ -9,6 +11,32 @@
 
 .header {
     align-self: center;
+
+    &__skew {
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        z-index: -10;
+        top: 0;
+        left: 0;
+        position: absolute;
+        height: 110vh;
+        width: 100vw;
+        background-color: #444444;
+    }
+    
+    &__border {
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        clip-path: polygon(0 48%, 100% 23%, 100% 25%, 0 50%);
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        z-index: -10;
+        top: 0;
+        left: 0;
+        position: absolute;
+        height: 110vh;
+        width: 100vw;
+        background-color: #444444;
+    }
 }
 
 .card {
