--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,6 +10,9 @@
 }
 
 .header {
+    font-family: 'Montserrat';
+    color: white;
+    text-align: center;
     align-self: center;
 
     &__skew {
@@ -36,6 +39,21 @@
         height: 110vh;
         width: 100vw;
         background-color: #444444;
+    }
+
+    h1 {
+        font-size: 36px;
+        font-weight: 500;
+        line-height: 44px;
+
+    }
+
+    p {
+        color: rgba(2555,2555,2555,0.75);
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 19px;
+        width: 403px;
     }
 }
 
