--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,7 @@
 .home{
     position: relative;
 
-    background-color: rgba(207, 207, 207, 0.00);
+    background-color: rgba(207, 207, 207, 0.06);
     display: grid;
 
     justify-items: center;
@@ -28,17 +28,15 @@
     }
     
     &__border {
-        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        -webkit-clip-path: polygon(0 48%, 100% 23%, 100% 25%, 0 50%);
         clip-path: polygon(0 48%, 100% 23%, 100% 25%, 0 50%);
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
         z-index: -10;
         top: 0;
         left: 0;
         position: absolute;
         height: 110vh;
         width: 100vw;
-        background-color: #444444;
+        background-color: #00cb79;
     }
 
     h1 {
@@ -49,7 +47,7 @@
     }
 
     p {
-        color: rgba(2555,2555,2555,0.75);
+        color: rgba(255,255,255,0.75);
         font-size: 15px;
         font-weight: 300;
         line-height: 19px;
@@ -61,7 +59,7 @@
     min-height: 736px;
     max-height: 994px;
     width: 1240px;
-    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 1);
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, .06);
     border-radius: 7px;
 
     display: grid;
@@ -82,7 +80,8 @@
 .input {
     display: grid;
     //grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: [number-s]26px [number-e input-s] 1fr [input-e];
+    grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
+    
     &__title {
         grid-column: input-s/input-e;
     }
